<resources>
    <string name="app_name">DoSoptKwanheejo</string>
    <string name="sopt_title">Welcome to SOPT</string>
    <string name="id">ID</string>
    <string name="pwd">비밀번호</string>
    <string name="nickname">닉네임</string>
    <string name="mbti">MBTI</string>
    <string name="input_id">아이디를 입력해주세요</string>
    <string name="input_pwd">비밀번호를 입력해주세요</string>
    <string name="input_nickname">닉네임을 입력해주세요</string>
    <string name="input_mbti">MBTI를 입력해주세요</string>
    <string name="set_nickname">닉네임을 설정해주세요.</string>
    <string name="set_birth">생년월일을 설정해주세요.</string>
    <string name="do_login">로그인 하기</string>
    <string name="do_sign_up">회원가입 하기</string>
    <string name="sign_up">회원가입</string>
    <string name="my_page">마이페이지</string>
    <string name="profile_image_description">내 프로필 이미지</string>
    <string name="success_login">로그인 성공</string>
    <string name="fail_login">로그인 실패</string>
    <string name="fail">실패</string>
    <string name="success_sign_up">회원가입 성공</string>
    <string name="fail_sign_up">회원가입 실패</string>
    <string name="profile_name">헬스의 신</string>
    <string name="profile_description">저는 스쿼트를 좋아하는데요? 어쩌라구요</string>
    <string name="auto_login">자동로그인</string>
    <string name="logout">로그아웃</string>
    <string name="finish_dialog">\'뒤로\'버튼 한번 더 누르시면 종료됩니다.</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>

    <string name="preference_file_key">PREFERENCE_FILE_KEY</string>
    <string name="state_description">상태 메시지</string>
    <string name="input_state_description">상태 메시지를 입력해주세요</string>
    <string name="birth">생년월일</string>
    <string name="home">홈</string>
    <string name="android">안드로이드</string>
    <string name="status_message">상태메시지</string>
    <string name="do_gift">선물하기</string>
    <string name="conversation">대화하기</string>
    <string name="add_friend">친구 추가하기</string>
    <string name="remove_friend">친구 삭제하기</string>
    <string name="remove_friend_description">정말로 친구를 삭제하시겠습니까?</string>
    <string name="papago">파파고</string>
</resources>