<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <NumberPicker
        android:id="@+id/np_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/year"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/np_year"
        app:layout_constraintStart_toEndOf="@id/np_year"
        app:layout_constraintTop_toTopOf="@id/np_year" />

    <NumberPicker
        android:id="@+id/np_months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_year"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_months"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/month"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/np_months"
        app:layout_constraintStart_toEndOf="@id/np_months"
        app:layout_constraintTop_toTopOf="@id/np_months" />

    <NumberPicker
        android:id="@+id/np_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/tv_months"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/day"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/np_day"
        app:layout_constraintStart_toEndOf="@id/np_day"
        app:layout_constraintTop_toTopOf="@id/np_day" />

</androidx.constraintlayout.widget.ConstraintLayout>